Thu Jul  9 16:46:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* block-source.rb: BBlock.yeldをちょっと最適化
	* block-source.rb, conf.rb: CONF.BLOCK_USE_STDOUT 対応

Thu Jul  9 14:55:23 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-file-output.rb, bjob.rb, controller.rb, n-splitter.rb: debugコ
	  メントをはずした
	* n-group-by.rb, n-mod-group-by.rb, conf.rb: CONF.HASH_OPTIMIZE対応

Wed Jul  8 18:30:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, n-group-by.rb, n-mod-group-by.rb: [SR#102] mod_group_by対応

Wed Jul  8 17:16:36 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb: MPNewProcessorにバグがあった
	* b-group-by.rb, n-group-by.rb: [SR#102] group_by対応
	* n-splitter.rb: 余分なものを削除

Wed Jul  8 15:04:48 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-splitter.rb, bjob.rb, controller.rb,
	  n-each-substream-mapper.rb: [SR#102] MPNewProcessorの変更に伴う変更.
	* logger.rb, exceptions.rb, exceptions.rb: 例外の修正

Mon Jul  6 19:05:37 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb, n-each-substream-mapper.rb: [SR#102] smap2, mapf対応

Mon Jul  6 17:54:44 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-splitter.rb, n-single-exportable.rb, n-splitter.rb: [SR#102] split対応

Mon Jul  6 17:21:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SR#102] postmapping_policy: MPNewProcessor

Wed Jul  1 23:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-each-element-mapper.rb: [SR#102] map対応

Wed Jul  1 22:14:29 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* *.rb: [SR#102] 直接接続可能なアーキテクチャ

Mon Jun 29 15:37:26 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort18.rb, sort19.rb: [BUG:101] ソートができない
	
Mon Jun 29 15:28:04 2009  Hajime Masuda <hajime.masuda@mail.rakuten.co.jp>

	* bug fix: ファイルオープンのモードがおかしかったので直した

Wed Jun 24 20:09:31 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

	* lib/fairy/job/each-substream-mapper.rb, lib/fairy/job/roma.rb