@@ -9,14 +9,24 @@ module Fairy
 
     include NSingleExportable
 
-    def start
-      super do
-	@import.each do |e|
-# 	  if e.__deep_connect_reference? && e.kind_of?(Array)
-# 	    e = e.to_a
-# 	  end
-	  @export.push e
-	end
+#     def input=(input)
+#       super
+#     end
+
+#     def start
+#       super do
+# 	@input.each do |e|
+# # 	  if e.__deep_connect_reference? && e.kind_of?(Array)
+# # 	    e = e.to_a
+# # 	  end
+# 	  @export.push e
+# 	end
+#       end
+#     end
+
+    def basic_each(&block)
+      @input.each do |e|
+	block.call e
       end
     end
   end
